--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hi, I'm <span style="color: var(--secondary);">Your Name</span></h1>
-                <p>A passionate Full-Stack Developer crafting beautiful web experiences with clean code and intuitive design.</p>
+                <h1>Hi, I'm <span style="color: var(--secondary);">Eduardo Guillen</span></h1>
+                <p>A passionate Developer/Tester crafting beautiful web experiences with clean code and intuitive design.</p>
                 <a href="#projects" class="btn">View My Work</a>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-github"></i></a>
