--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Hi, I'm <span style="color: var(--secondary);">Eduardo Guillen</span></h1>
-                <p>A passionate Developer/Tester crafting beautiful web experiences with clean code and intuitive design.</p>
+                <p>A passionate Fullstack Developer crafting beautiful web experiences with clean code and intuitive design.</p>
                 <a href="#projects" class="btn">View My Work</a>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-github"></i></a>
