--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hi, I'm <span style="color: var(--secondary);">Eduardo M. Guillen</span></h1>
-                <p>Software Engineer specializing in Web Development with expertise in Java and Javascript technologies. Committed to creating efficient and elegant solutions.</p>
+                <h1>Hi, I'm <span style="color: var(--secondary);">Eduardo Guillen</span></h1>
+                <p>Mechatronics Engineer passionate about full-stack development, specializing in Python for both front-end and back-end solutions. Dedicated to building efficient, elegant, and innovative applications.</p>
                 <a href="#projects" class="btn">View My Work</a>
                 <div class="social-links">
                     <a href="https://github.com/eduardomguillen" target="_blank"><i class="fab fa-github"></i></a>
@@ -585,23 +585,23 @@
             <h2>About Me</h2>
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="/api/placeholder/500/500" alt="Eduardo Maldonado Guillen">
+                    <img src="https://media.licdn.com/dms/image/v2/D4E03AQGefHdD5xkm1w/profile-displayphoto-shrink_800_800/B4EZW1rgBoHMAc-/0/1742509834717?e=1752105600&v=beta&t=H-WE05oTLvX-t72i7MdfDlhFKCdy_2RmbibcPEyT_V8" alt="Eduardo Maldonado Guillen">
                 </div>
                 <div class="about-content">
-                    <p>I'm a Software Engineer with experience in web application development and a passion for creating efficient, scalable solutions. I specialize in Java and JavaScript technologies, with a focus on modern frameworks like Spring and React.</p>
-                    <p>Throughout my career, I've worked on a variety of projects ranging from enterprise applications to innovative web platforms. I enjoy solving complex problems and continuously learning new technologies to improve my skills.</p>
-                    <p>Beyond coding, I'm interested in clean architecture, software design patterns, and building user-friendly interfaces that make technology accessible to everyone.</p>
+                    <p>I'm a Mechatronics Engineer with experience in full-stack web development, passionate about building efficient and scalable applications. I specialize in Python-based technologies and enjoy working with modern frameworks to deliver robust front-end and back-end solutions.</p>
+                    <p>Over the course of my career, I've contributed to a wide range of projects—from enterprise systems to creative web platforms—where I've tackled complex challenges and implemented practical, high-performance solutions.</p>
+                    <p>Beyond development, I'm deeply interested in clean software architecture, design patterns, and crafting intuitive user interfaces that make technology both powerful and accessible.</p>
                     <div class="skill-tags">
-                        <span class="skill-tag">Java</span>
-                        <span class="skill-tag">Spring Boot</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">C++</span>
                         <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">TypeScript</span>
+                        <span class="skill-tag">CSS</span>
+                        <span class="skill-tag">HTML</span>
+                        <span class="skill-tag">Kotlin</span>
                         <span class="skill-tag">React</span>
                         <span class="skill-tag">Node.js</span>
                         <span class="skill-tag">SQL</span>
                         <span class="skill-tag">Git</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">AWS</span>
                     </div>
                 </div>
             </div>
@@ -619,16 +619,16 @@
                         <img src="/api/placeholder/400/250" alt="Springboot REST API">
                     </div>
                     <div class="project-content">
-                        <h3>Spring Boot REST API</h3>
-                        <p>A comprehensive REST API built with Spring Boot, featuring JWT authentication, database integration, and extensive error handling.</p>
+                        <h3>BizzTrack</h3>
+                        <p>A Bussiness manager app that will help you and your team be more efficient! Inventory control, client profiles and history, Invoices and more.</p>
                         <div class="project-tags">
-                            <span class="project-tag">Java</span>
-                            <span class="project-tag">Spring Boot</span>
-                            <span class="project-tag">REST API</span>
-                            <span class="project-tag">JWT</span>
+                            <span class="project-tag">Python</span>
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">PyQt6</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/eduardomguillen/springboot-rest-api" target="_blank"><i class="fab fa-github"></i> Source Code</a>
+                            <a href="https://github.com/eduardomguillen/Inventory-Management" target="_blank"><i class="fab fa-github"></i> Source Code</a>
                         </div>
                     </div>
                 </div>
