--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                         <div class="timeline-date">2022 - 2023</div>
                         <h3>UI Software Tester</h3>
                         <h4>BSH Spain</h4>
-                        <p>QA Software testing focusing on Regression Tetsing, Test Automation and Manual Testing.</p>
+                        <p>User Interface Software testing focusing on Regression Testing, Test Automation implementation and Manual Testing.</p>
                     </div>
                 </div>
                 
