--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                         <div class="timeline-date">2024 - Present</div>
                         <h3>Front-End Developer</h3>
                         <h4>CreativeIQ</h4>
-                        <p>Team Lead on web development, implement microservices architecture, Workflow Automations and web desing.</p>
+                        <p>Team Lead on web development, implement microservices architecture, Workflow Automations and web design.</p>
                     </div>
                 </div>
                 
