--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
             <h2>About Me</h2>
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="https://media.licdn.com/dms/image/v2/D4E03AQGefHdD5xkm1w/profile-displayphoto-shrink_800_800/B4EZW1rgBoHMAc-/0/1742509834717?e=1762387200&v=beta&t=MNthElHZGM1zSaieQXlElpbCL6-txJTE9kxHpDyegMU" alt="Eduardo Maldonado Guillen">
+                    <img src="https://github.com/EduardoMGuillen/eduardomguillen.github.io/blob/80af199a5d2074912841876ba60414bf35d66529/472109158_3760882584173472_826866611204739859_n.jpg" alt="Eduardo Maldonado Guillen">
                 </div>
                 <div class="about-content">
                     <p>I'm a Mechatronics Engineer with experience in full-stack web development, passionate about building efficient and scalable applications. I specialize in Python-based technologies and enjoy working with modern frameworks to deliver robust front-end and back-end solutions.</p>
@@ -1283,6 +1283,40 @@
                             <span class="tech-tag">CSS3</span>
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">Design</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- La Gran Casa Blanca -->
+                <div class="website-card">
+                    <div class="website-preview">
+                        <div class="browser-header">
+                            <div class="browser-dots">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <div class="browser-url">lagrancasablanca.com</div>
+                        </div>
+                        <div class="website-screenshot">
+                            <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?w=500&h=300&fit=crop" alt="La Gran Casa Blanca">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <h4>La Gran Casa Blanca</h4>
+                                    <p>Nightlife and live events venue in San Pedro Sula</p>
+                                    <a href="https://www.lagrancasablanca.com/" target="_blank" class="visit-btn">Visit Site</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="website-info">
+                        <h3>La Gran Casa Blanca</h3>
+                        <p>Nightlife experience site promoting themed evenings, live bands, and upcoming events for Astronomical Discoteca in San Pedro Sula.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Events</span>
                         </div>
                     </div>
                 </div>
