--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
             <h2>About Me</h2>
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="https://github.com/EduardoMGuillen/eduardomguillen.github.io/blob/80af199a5d2074912841876ba60414bf35d66529/472109158_3760882584173472_826866611204739859_n.jpg" alt="Eduardo Maldonado Guillen">
+                    <img src="https://raw.githubusercontent.com/EduardoMGuillen/eduardomguillen.github.io/main/472109158_3760882584173472_826866611204739859_n.jpg" alt="Eduardo Maldonado Guillen">
                 </div>
                 <div class="about-content">
                     <p>I'm a Mechatronics Engineer with experience in full-stack web development, passionate about building efficient and scalable applications. I specialize in Python-based technologies and enjoy working with modern frameworks to deliver robust front-end and back-end solutions.</p>
