--- a/index.html
+++ b/index.html
@@ -981,6 +981,108 @@
             <p style="text-align: center; margin-bottom: 3rem; font-size: 1.1rem; color: var(--gray);">Explore the digital experiences I've crafted for clients across various industries</p>
             
             <div class="websites-grid">
+                <!-- Inmobiliaria Moderna -->
+                <div class="website-card">
+                    <div class="website-preview">
+                        <div class="browser-header">
+                            <div class="browser-dots">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <div class="browser-url">inmobiliariamodernahn.com</div>
+                        </div>
+                        <div class="website-screenshot">
+                            <img src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=500&h=300&fit=crop" alt="Inmobiliaria Moderna">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <h4>Inmobiliaria Moderna</h4>
+                                    <p>Real estate solutions in Honduras</p>
+                                    <a href="https://inmobiliariamodernahn.com/" target="_blank" class="visit-btn">Visit Site</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="website-info">
+                        <h3>Inmobiliaria Moderna</h3>
+                        <p>Professional real estate website offering property sales, rentals, and expert consultation services. Features property listings, appointment booking system, and comprehensive contact information for residential and commercial properties in San Pedro Sula.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Real Estate</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Stellare -->
+                <div class="website-card">
+                    <div class="website-preview">
+                        <div class="browser-header">
+                            <div class="browser-dots">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <div class="browser-url">stellare.co</div>
+                        </div>
+                        <div class="website-screenshot">
+                            <img src="https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?w=500&h=300&fit=crop" alt="Stellare">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <h4>Stellare</h4>
+                                    <p>Custom Italian bracelet designer</p>
+                                    <a href="https://stellare.co/" target="_blank" class="visit-btn">Visit Site</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="website-info">
+                        <h3>Stellare</h3>
+                        <p>E-commerce platform for custom Italian charm bracelets. Features an interactive bracelet builder, product catalog with charms and accessories, shopping cart functionality, and personalized design tools. Perfect for creating unique, meaningful jewelry pieces.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">E-commerce</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- La Gran Casa Blanca -->
+                <div class="website-card">
+                    <div class="website-preview">
+                        <div class="browser-header">
+                            <div class="browser-dots">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                            <div class="browser-url">lagrancasablanca.com</div>
+                        </div>
+                        <div class="website-screenshot">
+                            <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?w=500&h=300&fit=crop" alt="La Gran Casa Blanca">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <h4>La Gran Casa Blanca</h4>
+                                    <p>Nightlife and live events venue in San Pedro Sula</p>
+                                    <a href="https://www.lagrancasablanca.com/" target="_blank" class="visit-btn">Visit Site</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="website-info">
+                        <h3>La Gran Casa Blanca</h3>
+                        <p>Nightlife experience site promoting themed evenings, live bands, and upcoming events for Astronomical Discoteca in San Pedro Sula.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Events</span>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- CreativeIQ Marketing -->
                 <div class="website-card">
                     <div class="website-preview">
@@ -1287,39 +1389,6 @@
                     </div>
                 </div>
 
-                <!-- La Gran Casa Blanca -->
-                <div class="website-card">
-                    <div class="website-preview">
-                        <div class="browser-header">
-                            <div class="browser-dots">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                            </div>
-                            <div class="browser-url">lagrancasablanca.com</div>
-                        </div>
-                        <div class="website-screenshot">
-                            <img src="https://images.unsplash.com/photo-1542314831-068cd1dbfeeb?w=500&h=300&fit=crop" alt="La Gran Casa Blanca">
-                            <div class="overlay">
-                                <div class="overlay-content">
-                                    <h4>La Gran Casa Blanca</h4>
-                                    <p>Nightlife and live events venue in San Pedro Sula</p>
-                                    <a href="https://www.lagrancasablanca.com/" target="_blank" class="visit-btn">Visit Site</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="website-info">
-                        <h3>La Gran Casa Blanca</h3>
-                        <p>Nightlife experience site promoting themed evenings, live bands, and upcoming events for Astronomical Discoteca in San Pedro Sula.</p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">HTML5</span>
-                            <span class="tech-tag">CSS3</span>
-                            <span class="tech-tag">JavaScript</span>
-                            <span class="tech-tag">Events</span>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
